# aida-instructor-thesis

./: Makefile  README.md  main.zh-cn.typ  main.zh-tw.typ  pyproject.toml
data/: dive.74918b030ad842a5a66103d4aa1c56d3.csv  dive.fabd899bd41a4c8c97849fba45034bf9.csv  dives.csv  dives.zx.csv
en/: abstract.typ  body.typ
lib/: macro.typ
manuscripts/: TRANSLATION.zh-tw.md  main.en.typ
manuscripts/en/: appendix.typ  body.typ  main.typ
manuscripts/lib/: main.bib
manuscripts/zh-cn/: abstract.typ  body.typ  main.typ
manuscripts/zh-tw/: TRANSLATION.md  body.typ  main.typ
scripts/: compute-frontiers.py  plot-dive-profiles.py  plot-example-budget.py  plot-example-profile.py  plot-frontier-efforts.py  plot-frontier-profiles.py  plot-frontier-usage.py  plot-frontiers.py  plot-td-diagram.py
zh-cn/: appendix.typ  body.typ
zh-tw/: abstract.typ  appendix.typ  body.typ
