[project]
name = "aida-instructor-thesis"
version = "0.1.0"
description = "Manuscript and analysis for freediving performance frontiers, written in Typst with Python-generated figures."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Tzu-Ming (Harry) Hsu", email = "stmharry@alum.mit.edu" },
]
dependencies = [
  "matplotlib>=3.10.8",
  "numba>=0.63.1",
  "numpy>=2.3.5",
  "pandas>=2.3.3",
]
